--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -1,91 +1,90 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" type="text/css" rel="stylesheet"/>
+    <link href="alweer.css" type="text/css" rel="stylesheet"/>
     <title>Home</title>
 </head>
 <body>
     <header>
         <div class="header-left">
-            <img src="image/logo.png" alt="Boskalis logo" title="slogan" class="logo">
+            <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
         </div>
         <div class="header-right">
-            <!-- Engelse vlag naast het hamburger menu -->
-            <a href="ENhome.html" target="_blank" class="logo-link english-link">
-                <img src="image/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="Engelse vlag" title="Engelse site" class="english">
-            </a>
-            <!-- Hamburger menu -->
-            <div id="menutoggle">
-                <input type="checkbox" id="menu-toggle-box"/>
-                <label for="menu-toggle-box">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-                <ul class="menu">
-                    <li>Meer info</li>
-                    <li class="dropdown">
-                        <a href="about-us.html" target="_blank">Over ons</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="activities.html" target="_blank">Activiteiten</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="sustainability.html" target="_blank">Duurzaamheid</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="career.html" target="_blank">Carrière</a>
-                    </li>
-                </ul>
-            </div>
+            <!-- Hamburger menu en navigatie rechts -->
+            <nav>
+                <div id="menutoggle">
+                    <input type="checkbox" id="menu-toggle-box"/>
+                    <label for="menu-toggle-box">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </label>
+                    <!-- Engelse vlag link die pas zichtbaar is wanneer het hamburger menu open is -->
+                    <a href="ENhome.html" target="_blank" class="logo-link english-link">
+                        <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
+                    </a>
+                    <ul class="menu">
+                        <li>meer info</li>
+                        <li class="dropdown">
+                            <a href="over ons.html" target="_blank">Over ons</a>
+                        </li>
+                        <li class="dropdown">
+                            <a href="Activiteiten.html" target="_blank">Activiteiten</a>
+                        </li>
+                        <li class="dropdown">
+                            <a href="Duurzaamheid.html" target="_blank">Duurzaamheid</a>
+                        </li>
+                        <li class="dropdown">
+                            <a href="Carrière.html" target="_blank">carrière</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
-    <article class="content">
-        <section id="working">
-            <h2>Werken bij Boskalis</h2>
+    <article class="inhoud">
+        <section id="werken">
+            <h2>Werk bij Boskalis</h2>
             <p>
-                Deze Boskalis-website is voornamelijk in het Nederlands. De vacatures en internationale informatie van Boskalis zijn beschikbaar in het Engels.
-                Je kunt de openstaande vacatures, opleidingsprogramma's en sollicitatiemogelijkheden vinden in de carrière sectie.
+                Deze Boskalis website is grotendeels gemaakt in het nederlands. Boskalis vacature en Boskalis internationaal is beschikbaar in het engels.
+                Je kan de openstaande vacatures, trainingsprogramma en sollicitaiemogelijkheden vinden bij carrière.
             </p>
-            <a href="https://careers.boskalis.com/" class="extraweb">Werken bij Boskalis website</a>
+            <a href="https://careers.boskalis.com/" class="extraweb">werken bij Boskalis website</a>
         </section>
         <aside>
-            <img src="image/employees.png" alt="werken" title="mensen aan het werk">
+            <img src="image\werknemers .png" alt="werken" title="mensen op werk">
         </aside>
         <section>
-            <h2>Pers & nieuwsberichten</h2>
+            <h2>pers-nieuwsberichten</h2>
             <p>
-                De meeste pers- en nieuwsberichten zijn beschikbaar in zowel het Nederlands als het Engels.
-                Voor Nederlandstalige berichten moet je de Nederlandse vlag selecteren in het archief.
+                De grootste deel van de pers en nieuwsberichten is in het nederlands en engels.
+                voor nederlands talige berichten moet je in het archief het nederlands talige vlagetje
             </p>
-            <a href="https://boskalis.com/en/press/press-releases-and-company-news" class="extraweb" title="onze fotograaf">
-                Ga naar pers- en nieuwsberichten
+            <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws" class="extraweb" title="onze fotograaf">
+                naar pers- en nieuwsberichten
             </a>
         </section>
         <aside>
-            <img src="image/camera-person-on-beach.png" alt="camera persoon op het strand" title="een internetkabel">
+            <img src="image\camera persoon op strand.png" alt="camera persoon op strand" title="een internetkabel">
         </aside>
         <section>
-            <h2>Downloadcentrum</h2>
+            <h2>Download center</h2>
             <p>
-                In het downloadcentrum zijn verschillende documenten over ons bedrijf beschikbaar voor download, zoals jaarverslagen, brochures, regelgeving en notulen.
-                Elk document heeft een vlag die de taal van het document aangeeft.
-                Voor de zoekfunctie moet je Engelse zoektermen gebruiken om het te laten werken.
+                In de download center zijn er een aantal beschikbare documenten over ons bedrijf  om te downloaden. Bestanden zoals jaarverslagen, brochures, reglementen en notulen.
+                Er is per download een vlagetje om te zeggen in welke taal het document in zit.
+                Voor de zoekfunctie moet je engelse zoektermen gebruiken om het te laten werken
             </p>
-            <a href="https://careers.boskalis.com/" class="extraweb">Ga naar downloadcentrum</a>
+            <a href="https://careers.boskalis.com/" class="extraweb">naar download center</a>
         </section>
         <aside>
-            <img src="image/internet-cables.png" alt="internetkabel" title="internetkabel">
+            <img src="image\internetkabels.png" alt="internetkabel" title="internetkabel">
         </aside>
-        <section>
-            Locatie:
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2465.8430126111307!2d4.7290556763374365!3d51.82729818728392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c4299bc80a18f3%3A0x1944ad283e228f0!2sBoskalis!5e0!3m2!1sen!2sbe!4v1740764897437!5m2!1sen!2sbe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
     </article>
-    <footer class="content">
-        <p>2025 &copy; Royal Boskalis</p>
+    <footer class="inhoud">
+        <p>2025 &copy; Lam Tim Nguyen Ngoc: Roayal Boskalis</p>
     </footer>
 </body>
 </html>
