--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -13,36 +13,34 @@
             <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
         </div>
         <div class="header-right">
-            <!-- Hamburger menu en navigatie rechts -->
-            <nav>
-                <div id="menutoggle">
-                    <input type="checkbox" id="menu-toggle-box"/>
-                    <label for="menu-toggle-box">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </label>
-                    <!-- Engelse vlag link die pas zichtbaar is wanneer het hamburger menu open is -->
-                    <a href="ENhome.html" target="_blank" class="logo-link english-link">
-                        <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
-                    </a>
-                    <ul class="menu">
-                        <li>meer info</li>
-                        <li class="dropdown">
-                            <a href="over ons.html" target="_blank">Over ons</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="Activiteiten.html" target="_blank">Activiteiten</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="Duurzaamheid.html" target="_blank">Duurzaamheid</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="Carrière.html" target="_blank">carrière</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            <!-- Engelse vlag naast hamburger menu -->
+            <a href="ENhome.html" target="_blank" class="logo-link english-link">
+                <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
+            </a>
+            <!-- Hamburger menu -->
+            <div id="menutoggle">
+                <input type="checkbox" id="menu-toggle-box"/>
+                <label for="menu-toggle-box">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <ul class="menu">
+                    <li>meer info</li>
+                    <li class="dropdown">
+                        <a href="over ons.html" target="_blank">Over ons</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Activiteiten.html" target="_blank">Activiteiten</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Duurzaamheid.html" target="_blank">Duurzaamheid</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Carrière.html" target="_blank">carrière</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <article class="inhoud">
@@ -82,9 +80,15 @@
         <aside>
             <img src="image\internetkabels.png" alt="internetkabel" title="internetkabel">
         </aside>
+        <section>
+            Locatie:
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2465.8430126111307!2d4.7290556763374365!3d51.82729818728392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m
+            3!1m2!1s0x47c4299bc80a18f3%3A0x1944ad283e228f0!2sBoskalis!5e0!3m2!1snl!
+            2sbe!4v1740764897437!5m2!1snl!2sbe" width="20%" height="15%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
     </article>
     <footer class="inhoud">
         <p>2025 &copy; Lam Tim Nguyen Ngoc: Roayal Boskalis</p>
     </footer>
 </body>
-</html>
+</html> 
