--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -27,19 +27,19 @@
                 </label>
                 <ul class="menu">
                     <li class="dropdown">
-                        <a href="index.html" target="_blank">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a href="over ons.html" target="_blank">Over ons</a>
+                        <a href="over ons.html">Over ons</a>
                     </li>
                     <li class="dropdown">
-                        <a href="Activiteiten.html" target="_blank">Activiteiten</a>
+                        <a href="Activiteiten.html">Activiteiten</a>
                     </li>
                     <li class="dropdown">
-                        <a href="Duurzaamheid.html" target="_blank">Duurzaamheid</a>
+                        <a href="Duurzaamheid.html">Duurzaamheid</a>
                     </li>
                     <li class="dropdown">
-                        <a href="Carrière.html" target="_blank">carrière</a>
+                        <a href="Carrière.html">carrière</a>
                     </li>
                 </ul>
             </div>
